--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>اوریفلیم</title>
     <link rel="stylesheet" href="./icons/css/all.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link
-      rel="stylesheet"
-      href="./bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./icon/css/all.css" type="text/css" />
     <link rel="stylesheet" href="./mdb-ui-kit/css/mdb.min.css" />
   </head>
@@ -22,6 +19,21 @@
     body {
       font-family: oriflame;
     }
+    div.menu > nav {
+      border-bottom: 2px solid #f5f5f5;
+    }
+    ::-webkit-scrollbar {
+      background-color: rgb(241, 236, 236);
+      width: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(184, 182, 182);
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+    }
   </style>
   <body>
     <!-- make website -->
@@ -32,7 +44,12 @@
           <!--left-->
           <div>
             <div>
-              <span class="fas fa-bars menuFullWidth"></span>
+              <div class="container" onclick="myFunction(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+              </div>
+              <!-- <span class="fas fa-bars menuFullWidth"></span> -->
               <span class="fas fa-bars mediaMenuFullWidth" id="navBars"></span>
               <div class="menuFullWidth">
                 <ul class="list-unstyled">
@@ -1140,7 +1157,7 @@
               </div>
             </div>
 
-            <div class="mediasearch">
+            <div class="mediasearch clickSearch">
               <span class="fa fa-search"></span>
             </div>
 
@@ -1180,11 +1197,11 @@
               </div>
             </div>
 
-            <div>
+            <div class="our">
               <a href="#">our story</a>
             </div>
 
-            <div>
+            <div class="us">
               <a href="#">join us</a>
             </div>
 
@@ -1229,6 +1246,49 @@
       </div>
       <!--  -->
     </div>
+    <!--start divSearchMedia-->
+    <div class="divSearchMedia">
+      <input type="text" name="search" placeholder="search" />
+      <span class="fa-light fa-search"></span>
+      <span class="fa-light fa-close"></span>
+    </div>
+    <!--end divSearchMedia-->
+    <!--start our story-->
+    <div class="ourStory">
+      <div class="a">
+        <img src="./images/story1.jpg" alt="" />
+        <p>Who we are</p>
+        <div class="cover"></div>
+      </div>
+      <div class="b">
+        <img src="./images/story2.jpg" alt="" />
+        <p>Product Philosophy</p>
+        <div class="cover"></div>
+      </div>
+      <div class="c">
+        <img src="./images/story3.jpg" alt="" />
+        <p>Sustainability</p>
+        <div class="cover"></div>
+      </div>
+    </div>
+    <!--end our story-->
+
+    <!--start join us-->
+    <div class="joinUs">
+      <div class="a">
+        <img src="./images/join1.jpg" alt="" />
+        <div class="link">VIP Customer</div>
+        <div class="cover"></div>
+      </div>
+      <div class="b">
+        <img src="./images/join2.jpg" alt="" />
+        <div class="link">Brand Partner</div>
+        <div class="cover"></div>
+      </div>
+      <a href="#">I don't know yet</a>
+    </div>
+
+    <!--end join us-->
 
     <!--make slider-->
     <div class="topSlider">
@@ -1272,46 +1332,34 @@
             <div class="carousel-inner">
               <!-- Single item -->
               <div class="carousel-item active">
-                <img
-                  src="./images/slider.jpg"
-                  class="d-block"
-                  alt="Sunset Over the City"
-                />
+                <img src="./images/slid1.jpg" class="" alt="" />
+                <img src="./images/slid11.jpg" class="" alt="" />
                 <div class="carousel-caption d-block">
-                  <h5>NEW THE ONE WONDER LASH MASKARA</h5>
-                  <p>ENHANCING LASHES IN ALL REALITIES</p>
-                  <div>GET THE BLACKEST MASCARA</div>
+                  <h5>Unveiled: The Body Edition</h5>
+                  <p>Bring innovation into body care</p>
+                  <div>Shop new arrivals</div>
                 </div>
               </div>
 
               <!-- Single item -->
               <div class="carousel-item">
-                <img
-                  src="./images/slider3.jpg"
-                  class="d-block"
-                  alt="Canyon at Nigh"
-                />
+                <img src="./images/slid2.jpg" class="" alt="" />
+                <img src="./images/slid22.jpg" class="" alt="" />
                 <div class="carousel-caption d-block">
-                  <h5>GET INSPIRED BY THIS SEASON`S KEY TRENDS</h5>
-                  <p>SPRING IN BLOOM</p>
-                  <div>SHOP NOW</div>
+                  <h5>4-step skin performance</h5>
+                  <p>Personalised Novage+ skincare routines</p>
+                  <div>Discover more</div>
                 </div>
               </div>
 
               <!-- Single item -->
               <div class="carousel-item">
-                <img
-                  src="./images/slider5.jpg"
-                  class="d-block"
-                  alt="Cliff Above a Stormy Sea"
-                />
+                <img src="./images/slid3.jpg" class="" alt="" />
+                <img src="./images/slid33.jpg" class="" alt="" />
                 <div class="carousel-caption d-block">
-                  <h5>BETTER TWOGETHER</h5>
-                  <p>
-                    BEST SPRING DEALS <br />
-                    COME IN PAIRS!
-                  </p>
-                  <div>SHOP OFFERS</div>
+                  <h5>A lasting memory of a mother’s love</h5>
+                  <p>Signature scent to inspire the next generation</p>
+                  <div>Shop new arrivals</div>
                 </div>
               </div>
             </div>
@@ -1389,6 +1437,14 @@
           <p>£135.00</p>
           <p>£187.00</p>
         </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
+        </div>
       </div>
       <div class="c">
         <div>NEW</div>
@@ -1403,6 +1459,14 @@
           <p>Lift + Firm Routine Rich</p>
           <p>£135.00</p>
           <p>£187.00</p>
+        </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
         </div>
       </div>
       <div class="d">
@@ -1419,12 +1483,33 @@
           <p>£135.00</p>
           <p>£187.00</p>
         </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
+        </div>
       </div>
     </div>
 
     <div class="offerTop">
       <h2>Best offers</h2>
       <div>VIEW OFFER</div>
+    </div>
+
+    <div class="firstOffer">
+      <div class="e">
+        <div>
+          <img src="./images/offer5.jpg" alt="" />
+          <p>
+            BEST OFFERS <br />
+            SELECTION
+          </p>
+          <div>SHOP NOW</div>
+        </div>
+      </div>
     </div>
 
     <div class="offer">
@@ -1440,6 +1525,14 @@
           <p>Eau de Toilette</p>
           <p>£12.99</p>
           <p>£26.00</p>
+        </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
         </div>
       </div>
       <div class="b">
@@ -1496,6 +1589,14 @@
           <p>Purifying Liquid Hand Soap with Organic Green Tea & Cucumber</p>
           <p>£4.99</p>
           <p>£7.00</p>
+        </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
         </div>
       </div>
       <div class="e">
@@ -1557,6 +1658,14 @@
           <p>£18.49</p>
           <p>£21.99</p>
         </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
+        </div>
       </div>
       <div class="c">
         <div>
@@ -1573,6 +1682,14 @@
           <p>WellnessPack woman</p>
           <p>£32.99</p>
         </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
+        </div>
       </div>
       <div class="d">
         <div>
@@ -1588,6 +1705,14 @@
           <h2>WELLNESS BY ORIFLAME</h2>
           <p>WellnessPack man</p>
           <p>£32.99</p>
+        </div>
+        <div class="fiveStar">
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span>(5)</span>
         </div>
       </div>
     </div>
@@ -1798,6 +1923,46 @@
       </div>
     </div>
 
+    <div class="grayMedia">
+      <button class="accordion">
+        CORPORATE INFO <span class="fa fa-chevron-down"></span>
+      </button>
+      <div class="panel">
+        <button class="accordion">Work With Us</button>
+        <div class="panel"></div>
+        <button class="accordion">Who we are</button>
+        <div class="panel"></div>
+        <button class="accordion">Sustainability</button>
+        <div class="panel"></div>
+        <button class="accordion">Investor Relations</button>
+        <div class="panel"></div>
+        <button class="accordion">Oriflame.com</button>
+        <div class="panel"></div>
+      </div>
+
+      <button class="accordion">
+        SUPPORT / HELP <span class="fa fa-chevron-down"></span>
+      </button>
+      <div class="panel">
+        <button class="accordion">Support Centre</button>
+        <div class="panel"></div>
+        <button class="accordion">Track your order</button>
+        <div class="panel"></div>
+        <button class="accordion">Claims & returns</button>
+        <div class="panel"></div>
+      </div>
+
+      <button class="accordion">
+        DISCOVER <span class="fa fa-chevron-down"></span>
+      </button>
+      <div class="panel">
+        <button class="accordion">Join us</button>
+        <div class="panel"></div>
+        <button class="accordion">eCatalogue</button>
+        <div class="panel"></div>
+      </div>
+    </div>
+
     <div class="end">
       <p class="end">
         Oriflame is a leading beauty company selling direct. We are present in
@@ -1850,18 +2015,20 @@
 
     <script src="./bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="mdb-ui-kit/js/mdb.min.js"></script>
+    <script src="./mdb-ui-kit/js/mdb.min.js"></script>
 
     <script>
+      function myFunction(x) {
+        x.classList.toggle("change");
+      }
       document
         .querySelector(
-          "div.wrapper>div.menu>nav>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(1)"
+          "div.wrapper>div.menu>nav>div:nth-of-type(1)>div:nth-of-type(1)>div.container"
         )
         .addEventListener("click", function () {
           document
             .querySelector("div.menuFullWidth")
             .classList.toggle("active");
-          this.classList.toggle("fa-close");
         });
 
       // document
@@ -1881,6 +2048,20 @@
         .querySelector("button.topMenuSignIn")
         .addEventListener("click", function () {
           document.querySelector("div.mediaSignIn").classList.toggle("active");
+        });
+
+      document.querySelector("div.our").addEventListener("click", function () {
+        document.querySelector("div.ourStory").classList.toggle("activeFlex");
+      });
+      document.querySelector("div.us").addEventListener("click", function () {
+        document.querySelector("div.joinUs").classList.toggle("activeFlex");
+      });
+      document
+        .querySelector("div.clickSearch")
+        .addEventListener("click", function () {
+          document
+            .querySelector("div.divSearchMedia")
+            .classList.toggle("active");
         });
 
       document
