--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       -ms-border-radius: 10px;
       -o-border-radius: 10px;
     }
-    .accordion{
+    .accordion,button.topMenuBars,button.topMenuSignIn{
       color: black;
     }
   </style>
